--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,65 @@
+* {
+    margin: 0;
+}
+
+*,
+*:before,
+*:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+/*--------------------*/
+
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #F5F7FA;
 }
 
-* {
-    box-sizing: border-box;
-}
-
 .main {
-    background-color: #FFFFFF;
-    margin: 0 auto;
+    background-color: #FFF;
+    margin: 40px auto;
     width: 1200px;
     height: 1319px;
     display: flex;
     flex-direction: row;
     /* offset-x offset-y blur-radius spread-radius color */
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
 }
 
 h1 {
     font-size: 45px;
+    line-height: 55px;
+    margin-bottom: 24px;
+
 }
 
 h3 {
     font-size: 22px;
+    line-height: 27px;
+    margin-bottom: 12px;
 }
 
-h6 {
-    color: #A8A8A8;
-    font-size: 12px;
-    font-weight: normal;
-    margin-top: 11px;
-    margin-bottom: 8px;
-}
-
-ol>li::marker {
-    font-weight: bold;
+h4 {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 11px;
 }
 
 ul,
 ol {
     padding-left: 22px;
     line-height: 24px;
+    margin-bottom: 20px;
 }
 
 a {
@@ -49,9 +67,7 @@ a {
     color: #595959;
 }
 
-.photo {
-    width: 370px;
-}
+/* LEFT BLOCK */
 
 .left-block {
     width: 370px;
@@ -60,11 +76,14 @@ a {
     background-color: #1E2939;
 }
 
+.photo {
+    width: 370px;
+}
+
 .left-text-block {
     margin-top: 51px;
     margin-left: 40px;
-    color: #FFFFFF;
-    font-size: 14px;
+    color: #FFF;
 }
 
 .left-text-block div {
@@ -87,48 +106,74 @@ a {
     color: lightgray;
 }
 
+/* RIGHT BLOCK  */
+
 .right-block {
     padding-left: 88px;
     padding-top: 102px;
-    padding-right: 100px;
+}
+
+.right-block li {
+    color: #595959;
 }
 
 .about {
-    width: 525px;
+    /* width: 400px; */
+    /* Block width has been changed intentionally to accomodate the new name's length */
+    margin-bottom: 40px;
+}
+
+.about p.black-bold {
+    margin-bottom: 19px;
+}
+
+
+.description {
+    line-height: 24px;
+    width: 400px;
 }
 
 .projects {
-    margin-top: 40px;
     margin-bottom: 51px;
+}
+
+ol>li::marker {
+    font-weight: bold;
 }
 
 .experience {
     margin-bottom: 43px;
+    /* width: 525px; */
+    width: 530px;
 }
 
-/* .education {
-    margin-top: 40px;
-    margin-bottom: 51px;
-} */
-
-.right-block {
-    background-color: #FFFFFF;
+.duration {
+    color: #A8A8A8;
+    font-size: 12px;
+    line-height: 15px;
+    /* margin-top: 11px; */
+    margin-bottom: 8px;
 }
 
-.right-block p,
-.right-block li {
-    color: #595959;
+.education p.black-bold {
+    margin-bottom: 12px;
 }
+
+/* OTHER */
 
 .orange {
     color: #FB6D3A;
 }
 
 .black {
-    color: black;
+    color: #000;
+}
+
+.black-bold {
+    color: #000;
     font-weight: bold;
 }
 
 p.black {
-    color: black;
+    color: #000;
 }
