--- a/css/style.css
+++ b/css/style.css
@@ -2,199 +2,208 @@
 
 html,
 body {
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
 }
 
 *,
 *:before,
 *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 
 * {
-    margin: 0;
+	margin: 0;
 }
 
 /* Styles */
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    background-color: #F5F7FA;
+	font-family: 'Montserrat', sans-serif;
+	background-color: #F5F7FA;
 }
 
 .main {
-    background-color: #FFF;
-    margin: 40px auto;
-    width: 1200px;
-    height: 1319px;
-    display: flex;
-    flex-direction: row;
-    /* offset-x offset-y blur-radius spread-radius color */
-    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
-    font-size: 14px;
+	background-color: #FFF;
+	margin: 40px auto;
+	width: 1200px;
+	height: 1319px;
+	display: flex;
+	flex-direction: row;
+	/* offset-x offset-y blur-radius spread-radius color */
+	box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+	font-size: 14px;
 }
 
 h1 {
-    font-size: 45px;
-    line-height: 55px;
-    margin-bottom: 24px;
+	font-size: 45px;
+	line-height: 55px;
+	margin-bottom: 24px;
 
 }
 
 h3 {
-    font-size: 22px;
-    line-height: 27px;
-    margin-bottom: 12px;
+	font-size: 22px;
+	line-height: 27px;
+	margin-bottom: 12px;
 }
 
 h4 {
-    font-size: 16px;
-    line-height: 20px;
-    margin-bottom: 11px;
+	font-size: 16px;
+	line-height: 20px;
+	margin-bottom: 11px;
 }
 
 ul,
 ol {
-    list-style-position: inside;
-    padding-left: 0;
-    line-height: 24px;
-    margin-bottom: 20px;
+	/* list-style-position: outside; */
+	padding-left: 0;
+	line-height: 24px;
+	margin-bottom: 20px;
 }
 
-ul>li::marker,
-ol>li::marker {
-    font-weight: bold;
+li {
+	margin-left: 18px;
+}
+
+ul li::marker,
+ol li::marker {
+	font-weight: bold;
 }
 
 a {
-    text-decoration: none;
-    color: #595959;
+	text-decoration: none;
+	color: #595959;
 }
 
 /* LEFT BLOCK */
 
 .left-block {
-    width: 370px;
-    height: 1319px;
-    padding-top: 40px;
-    background-color: #1E2939;
+	width: 370px;
+	height: 1319px;
+	padding-top: 40px;
+	background-color: #1E2939;
 }
 
 .photo {
-    width: 370px;
+	width: 370px;
 }
 
 .left-text-block {
-    margin-top: 51px;
-    margin-left: 40px;
-    color: #FFF;
+	margin-top: 51px;
+	margin-left: 40px;
+	color: #FFF;
 }
 
 .left-text-block div {
-    margin-bottom: 45px;
+	margin-bottom: 45px;
 }
 
 .left-text-block ul>li::marker {
-    color: #FB6D3A;
+	color: #FB6D3A;
 }
 
 .contacts p {
-    display: inline;
-    /* font-weight: bold; */
-    line-height: 24px;
-    margin-right: 20px;
+	display: inline;
+	/* font-weight: bold; */
+	line-height: 24px;
+	margin-right: 20px;
 }
 
 .contacts a {
-    color: lightgray;
+	color: lightgray;
 }
 
 /* RIGHT BLOCK  */
 
 .right-block {
-    padding-left: 88px;
-    padding-top: 102px;
+	padding-left: 88px;
+	padding-top: 102px;
 }
 
 .right-block li {
-    color: #595959;
+	color: #595959;
 }
 
-.right-block ol>li::marker {
-    color: #000;
+#projects-list li::marker {
+	color: #000;
 }
 
 .about {
-    /* width: 400px; */
-    /* Block width has been changed intentionally to accomodate the new name's length */
-    margin-bottom: 40px;
+	/* width: 400px; */
+	/* Block width has been changed intentionally to accomodate the new name's length */
+	margin-bottom: 40px;
 }
 
 .about p.black-bold {
-    margin-bottom: 19px;
+	margin-bottom: 19px;
 }
 
 .description {
-    line-height: 24px;
-    width: 400px;
+	line-height: 24px;
+	width: 400px;
 }
 
 .projects {
-    margin-bottom: 51px;
+	margin-bottom: 51px;
 }
 
 .experience {
-    margin-bottom: 43px;
-    /* width: 525px; */
-    width: 530px;
+	margin-bottom: 43px;
+	/* width: 525px; */
+	width: 530px;
 }
 
 .duration {
-    color: #A8A8A8;
-    font-size: 12px;
-    line-height: 15px;
-    margin-bottom: 8px;
+	color: #A8A8A8;
+	font-size: 12px;
+	line-height: 15px;
+	margin-bottom: 8px;
 }
 
 .education p.black-bold {
-    margin-bottom: 12px;
+	margin-bottom: 12px;
 }
 
 /* OTHER */
 
 .orange {
-    color: #FB6D3A;
+	color: #FB6D3A;
 }
 
 .black {
-    color: #000;
+	color: #000;
 }
 
 .black-bold {
-    color: #000;
-    font-weight: bold;
+	color: #000;
+	font-weight: bold;
 }
 
 p.black {
-    color: #000;
+	color: #000;
 }
 
-/* List leaders in Projects */
+/* Dashed leaders in Projects */
 
-.underlined {
-    text-decoration: underline dashed;
-    color: #A8A8A8;
-    white-space: pre;
+#projects-list li div {
+	display: inline-block;
 }
 
-/* List bullet spacing in Projects */
+.leaders-box {
+	width: 280px;
+	margin-left: 13px;
+	white-space: nowrap;
+	overflow: hidden;
+	vertical-align: bottom;
+}
 
-li span.bullet-spacing {
-    position: relative;
-    left: 13px;
+.project-link:after {
+	content:
+		"_ _ _ _ _ _ _ _ _ _ _ _ _ _";
+	color: #A8A8A8;
 }
