--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 	background-color: #F5F7FA;
 }
 
-.main {
+main {
 	background-color: #FFF;
 	margin: 40px auto;
 	width: 1200px;
@@ -38,6 +38,8 @@ body {
 	box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 	font-size: 14px;
 }
+
+/* Global tag properties */
 
 h1 {
 	font-size: 45px;
@@ -93,17 +95,18 @@ a {
 	width: 370px;
 }
 
-.left-text-block {
+.sidebar-text {
 	margin-top: 51px;
 	margin-left: 40px;
 	color: #FFF;
 }
 
-.left-text-block div {
+/* .sidebar-text div,  */
+.sidebar-text section {
 	margin-bottom: 45px;
 }
 
-.left-text-block ul>li::marker {
+.sidebar-text ul>li::marker {
 	color: #FB6D3A;
 }
 
@@ -198,7 +201,7 @@ p.black {
 
 /* Dashed leaders in Projects */
 
-#projects-list li div {
+#projects-list li span {
 	display: inline-block;
 }
 
