--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ a {
 
 /* MISC */
 
-.orange {
+span.orange {
 	color: #FB6D3A;
 }
 
@@ -144,8 +144,7 @@ a {
 	color: #000;
 }
 
-.black-bold {
-	color: #000;
+.bold {
 	font-weight: bold;
 }
 
