Minor css polishes

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ a {
 	margin-bottom: 40px;
 }
 
-.about p.black-bold {
+.about p.black.bold {
 	margin-bottom: 19px;
 }
 
@@ -130,7 +130,7 @@ a {
 	margin-bottom: 8px;
 }
 
-.education p.black-bold {
+.education p.black.bold {
 	margin-bottom: 12px;
 }
 
