--- a/css/style.css
+++ b/css/style.css
@@ -26,19 +26,18 @@ body {
 	background-color: #F5F7FA;
 }
 
-.page {
-	background-color: #FFF;
-	margin: 40px auto;
+#page {
 	width: 1200px;
 	height: 1319px;
+	font-size: 14px;
+	background-color: #FFF;
+	margin: 40px auto;
 	display: flex;
 	flex-direction: row-reverse;
-	/* offset-x offset-y blur-radius spread-radius color */
 	box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
-	font-size: 14px;
 }
 
-/* Global tag properties */
+/* Global properties */
 
 h1 {
 	font-size: 45px;
@@ -69,11 +68,6 @@ li {
 	margin-left: 18px;
 }
 
-ul li::marker,
-ol li::marker {
-	font-weight: bold;
-}
-
 a {
 	text-decoration: none;
 	color: #595959;
@@ -81,31 +75,34 @@ a {
 
 /* RIGHT BLOCK  */
 
-.right-block {
+#right-block {
 	width: 830px;
 	padding-left: 88px;
 	padding-top: 102px;
 }
 
-.right-block li {
+#right-block li {
 	color: #595959;
 }
 
 #projects-list li::marker {
 	color: #000;
+	font-weight: bold;
 }
 
-.about {
-	/* Block width has been changed intentionally to accomodate the new name's length */
+#about {
+	/* This block's width has been changed intentionally to accomodate new name's length */
 	/* width: 400px; */
 	margin-bottom: 40px;
 }
 
-.about p.black.bold {
+#target {
 	margin-bottom: 19px;
+	font-weight: bold;
+	color: #000;
 }
 
-.description {
+#description {
 	line-height: 24px;
 	/* Block width has been changed intentionally to accomodate the new name's length */
 	/* width: 400px; */
@@ -113,11 +110,11 @@ a {
 	text-align: justify;
 }
 
-.projects {
+#projects {
 	margin-bottom: 51px;
 }
 
-.experience {
+#experience {
 	margin-bottom: 43px;
 	/* width: 525px; */
 	width: 530px;
@@ -130,13 +127,13 @@ a {
 	margin-bottom: 8px;
 }
 
-.education p.black.bold {
+#education .black.bold {
 	margin-bottom: 12px;
 }
 
 /* MISC */
 
-span.orange {
+h4 span {
 	color: #FB6D3A;
 }
 
@@ -148,47 +145,42 @@ span.orange {
 	font-weight: bold;
 }
 
-p.black {
-	color: #000;
-}
-
-
 /* LEFT BLOCK */
 
-.left-block {
+#left-block {
 	/* align-items: stretch; */
 	width: 370px;
 	padding-top: 40px;
 	background-color: #1E2939;
 }
 
-.photo {
+#photo {
 	width: 370px;
 }
 
-.sidebar-text {
+#sidebar-text {
 	margin-top: 51px;
 	margin-left: 40px;
 	color: #FFF;
 }
 
 /* .sidebar-text div,  */
-.sidebar-text section {
+#sidebar-text section {
 	margin-bottom: 45px;
 }
 
-.sidebar-text ul>li::marker {
+#sidebar-text ul>li::marker {
 	color: #FB6D3A;
 }
 
-.contacts p {
+#contacts p {
 	display: inline;
 	/* font-weight: bold; */
 	line-height: 24px;
 	margin-right: 20px;
 }
 
-.contacts a {
+#contacts a {
 	color: lightgray;
 }
 
@@ -197,7 +189,7 @@ p.black {
 	vertical-align: middle;
 }
 
-/* Dashed leaders in Projects */
+/* Dashed leaders in 'Projects' */
 
 #projects-list li span {
 	display: inline-block;
