Play with css reset

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /* CSS Reset */
 
-html,
+/* html,
 body {
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
-}
+} */
 
 *,
 *:before,
