--- a/css/style.css
+++ b/css/style.css
@@ -67,15 +67,8 @@ ol {
 }
 
 li {
-	/* margin-left: 18px; */
-	position: relative;
-	/* left: 18px; */
-	left: 1rem;
+	margin-left: 1em;
 }
-/* 
-li::marker {
-	width: 1em;
-} */
 
 a {
 	text-decoration: none;
@@ -155,6 +148,10 @@ h4 span {
 #projects-list ::marker {
 	color: #000;
 	font-weight: bold;
+}
+
+#projects-list li {
+		margin-left: 1.3em;
 }
 
 #projects-list li span {
