--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ h4 span {
 	margin-left: 13px;
 }
 
-.leaders-box {
+.leaders-wrapper {
 	width: 280px;
 	white-space: nowrap;
 	overflow: hidden;
